--- a/index.html
+++ b/index.html
@@ -2608,7 +2608,7 @@
                                             <img src="img/hand.png" alt="">
                                         </div>
                                         <div class="all__cards__item">
-                                            <img src="img/car.png" alt="">
+                                            <img src="img/car.webp" alt="">
                                         </div>
                                     </div>
                                 </div>
@@ -2622,7 +2622,7 @@
                                             </div>
                                             <div class="swiper-slide">
                                                 <div class="all__cards-hiden">
-                                                    <img src="img/car.png" alt="">
+                                                    <img src="img/car.webp" alt="">
                                                 </div>
                                             </div>
                                         </div>
@@ -2695,11 +2695,11 @@
                                         <div class="swiper">
                                             <div class="swiper-wrapper">
                                                 <div class="swiper-slide">
-                                                    <img class="" src="./img/sl_lip.png" alt="">
+                                                    <img class="" src="./img/sl_lip.webp" alt="">
                                                 </div>
                                                 <div class="swiper-slide video">
                                                     <a data-fancybox href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" class="">
-                                                        <img class="" src="./img/sl_lip2.png" alt="">
+                                                        <img class="" src="./img/sl_lip2.webp" alt="">
                                                         <div class="video__icon">
                                                             <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                                 <circle cx="50" cy="50" r="50" fill="#1B74E3" />
@@ -2730,8 +2730,8 @@
                                         <div class="plant__inner_thanks swiper">
                                             <div class="swiper-wrapper">
                                                 <img data-fancybox class="swiper-slide" src="./img/diplom1.jpg" alt="">
-                                                <img data-fancybox class="swiper-slide" src="./img/diplom2.jpg" alt="">
-                                                <img data-fancybox class="swiper-slide" src="./img/diplom3.jpg" alt="">
+                                                <img data-fancybox class="swiper-slide" src="./img/diplom2.webp" alt="">
+                                                <img data-fancybox class="swiper-slide" src="./img/diplom3.webp" alt="">
                                             </div>
                                             <div class="swiper__nav">
                                                 <button class="swiper-button-next"></button>
