--- a/services.html
+++ b/services.html
@@ -1075,7 +1075,7 @@
                                     <img src="img/hand.png" alt="">
                                 </div>
                                 <div class="all__cards__item">
-                                    <img src="img/car.png" alt="">
+                                    <img src="img/car.webp" alt="">
                                 </div>
                             </div>
                         </div>
