--- a/services.html
+++ b/services.html
@@ -1072,7 +1072,7 @@
                             </div>
                             <div class="all__cards">
                                 <div class="all__cards__item now">
-                                    <img src="img/hand.png" alt="">
+                                    <img src="img/hand.webp" alt="">
                                 </div>
                                 <div class="all__cards__item">
                                     <img src="img/car.webp" alt="">
