--- a/index.html
+++ b/index.html
@@ -1697,7 +1697,9 @@
                                             <span class="configure__form-price-description">Стоимость выбранной конфигурации от</span>
                                             <span class="configure__form-price">7 000 000 руб.</span>
                                         </div>
-                                        <button class="configure__form-button button--light">Отправить заявку<svg>
+                                        <button class="configure__form-button button--light">
+                                            <a href="#callback-modal">Отправить заявку</a>
+                                            <svg>
                                                 <use xlink:href="#message-icon"></use>
                                             </svg>
                                         </button>
@@ -2739,7 +2741,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <a href="#callback-modal" class="button">посетить завод<svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <a href="#sign-up-modal" class="button">посетить завод<svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path fill-rule="evenodd" clip-rule="evenodd" d="M5.19625 20.7785C4.93458 20.2935 4.93458 19.7052 5.19625 19.2202C8.34958 13.3885 14.1746 8.3335 19.9996 8.3335C25.8246 8.3335 31.6496 13.3885 34.8029 19.2218C35.0646 19.7068 35.0646 20.2952 34.8029 20.7802C31.6496 26.6118 25.8246 31.6668 19.9996 31.6668C14.1746 31.6668 8.34958 26.6118 5.19625 20.7785Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                                             <path d="M23.5355 16.4645C25.4881 18.4171 25.4881 21.5829 23.5355 23.5355C21.5829 25.4881 18.4171 25.4881 16.4645 23.5355C14.5118 21.5829 14.5118 18.4171 16.4645 16.4645C18.4171 14.5118 21.5829 14.5118 23.5355 16.4645" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                                         </svg>
@@ -2927,6 +2929,43 @@
                             </svg>
                         </button>
                         <div class="form-head animate-top">Оставьте заявку на модель</div>
+                        <div class="form-desk animate-top">Заполните форму и наш менеджер свяжется с вами в ближайшее время</div>
+                    </div>
+                    <form id="form_request" data-parsley-focus="none" data-need-validation>
+                        <div class="expert__item">
+                            <input type="text" required id="name3" data-parsley-name>
+                            <label for="name3">Ваше имя</label>
+                        </div>
+                        <div class="expert__item">
+                            <input class="phone js-phone-input" required id="phone3" type="tel" data-parsley-phone>
+                            <label for="phone3">Ваш телeфон</label>
+                        </div>
+                        <button class="button" type="submit">Отправить<svg width="36" height="26" viewBox="0 0 36 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M15.469 24.1833L33.7807 14.4633C34.9624 13.8366 34.9624 12.15 33.7807 11.5216L15.4957 1.81665C14.1157 1.08331 12.569 2.46665 13.154 3.90998L16.8024 12.91L13.124 22.0933C12.5474 23.5383 14.0924 24.9133 15.469 24.1833Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                                <path d="M16.8047 12.9167L34.6714 13" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                                <path d="M4.67188 17.9998H7.33854" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                                <path d="M3 12.9998H7.33333" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                                <path d="M1.33594 7.99984H7.33594" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                            </svg>
+                        </button>
+                    </form>
+                    <div class="expert__agree">
+                        <div class="expert__agree-star">*</div>
+                        <div class="expert__agree-text">Нажимая кнопку «Отправить» вы соглашаетесь с <a target="blank" href="#">политикой конфиденциальности</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="sign-up-modal" class="modal js-modal">
+                <div class="form form-style-1 hideLabels">
+                    <div class="form-header">
+                        <button class="modal__close js-close-modal">
+                            <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <rect x="6.40039" y="4.7998" width="40" height="3.2" transform="rotate(45 6.40039 4.7998)" fill="#A3AFCD" />
+                                <rect x="4.7998" y="33.6001" width="40" height="3.2" transform="rotate(-45 4.7998 33.6001)" fill="#A3AFCD" />
+                            </svg>
+                        </button>
+                        <div class="form-head animate-top">Записаться на просмотр завода</div>
                         <div class="form-desk animate-top">Заполните форму и наш менеджер свяжется с вами в ближайшее время</div>
                     </div>
                     <form id="form_request" data-parsley-focus="none" data-need-validation>
