--- a/error.html
+++ b/error.html
@@ -1324,7 +1324,7 @@
                         <div class="form-head animate-top">Ваша заявка успешно отправлена</div>
                         <div class="form-desk animate-top">Наш менеджер свяжется с вами в ближайшее время</div>
                     </div>
-                    <a class="button--light" href="#callback-modal">Отправить еще раз</a>
+                    <button class="button--light closeModal">Отлично</button>
                 </div>
             </div>
             <div class="modal js-modal popup ct thanks" id="success-modal-doc">
@@ -1344,9 +1344,7 @@
                         <div class="form-head animate-top">Ваша заявка успешно отправлена</div>
                         <div class="form-desk animate-top">Мы вышлем вам документацию на указанную электронную почту в ближайшее время</div>
                     </div>
-                    <button class="button--light">
-                        <a href="#callback-doc">Отправить еще раз</a>
-                    </button>
+                    <button class="button--light closeModal">Отлично</button>
                 </div>
             </div>
             <div id="callback-modal-expert" class="modal js-modal">
@@ -1404,9 +1402,7 @@
                         </button>
                         <div class="form-head animate-top">Ваша заявка успешно отправлена</div>
                         <div class="form-desk animate-top">Наш эксперт свяжется с вами в ближайшее время</div>
-                        <button class="button--light">
-                            <a href="#callback-expert">Отправить еще раз</a>
-                        </button>
+                        <button class="button--light closeModal">Отлично</button>
                     </div>
                 </div>
                 <style>
