--- a/index.html
+++ b/index.html
@@ -2218,14 +2218,16 @@
                                         <input class="phone js-phone-input" required id="phone" type="tel" data-parsley-phone>
                                         <label for="phone">ваш телефон</label>
                                     </div>
-                                    <a href="#success-modal-expert" class="button--light">Отправить<svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                            <path fill-rule="evenodd" clip-rule="evenodd" d="M17.469 31.1833L35.7807 21.4633C36.9624 20.8366 36.9624 19.15 35.7807 18.5216L17.4957 8.81665C16.1157 8.08331 14.569 9.46665 15.154 10.91L18.8024 19.91L15.124 29.0933C14.5474 30.5383 16.0924 31.9133 17.469 31.1833Z" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                                            <path d="M18.8047 19.9167L36.6714 20" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                                            <path d="M6.67188 24.9998H9.33854" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                                            <path d="M5 19.9998H9.33333" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                                            <path d="M3.33594 14.9998H9.33594" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
-                                        </svg>
-                                    </a>
+                                    <button href="#success-modal-expert" type="submit">
+                                        <a class="button--light">Отправить<svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path fill-rule="evenodd" clip-rule="evenodd" d="M17.469 31.1833L35.7807 21.4633C36.9624 20.8366 36.9624 19.15 35.7807 18.5216L17.4957 8.81665C16.1157 8.08331 14.569 9.46665 15.154 10.91L18.8024 19.91L15.124 29.0933C14.5474 30.5383 16.0924 31.9133 17.469 31.1833Z" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                                <path d="M18.8047 19.9167L36.6714 20" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                                <path d="M6.67188 24.9998H9.33854" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                                <path d="M5 19.9998H9.33333" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                                <path d="M3.33594 14.9998H9.33594" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                                            </svg>
+                                        </a>
+                                    </button>
                                 </form>
                                 <div class="expert__agree">
                                     <div class="expert__agree-star">*</div>
@@ -2804,8 +2806,8 @@
                                                 <input class="phone js-phone-input" required type="tel" id="phone1" data-parsley-phone>
                                                 <label for="phone1">ваш телефон</label>
                                             </div>
-                                            <button type="submit">
-                                                <a href="#success-modal" class="button--light">Отправить<svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <button href="#success-modal" type="submit">
+                                                <a class="button--light">Отправить<svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M17.469 31.1833L35.7807 21.4633C36.9624 20.8366 36.9624 19.15 35.7807 18.5216L17.4957 8.81665C16.1157 8.08331 14.569 9.46665 15.154 10.91L18.8024 19.91L15.124 29.0933C14.5474 30.5383 16.0924 31.9133 17.469 31.1833Z" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                                                         <path d="M18.8047 19.9167L36.6714 20" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                                                         <path d="M6.67188 24.9998H9.33854" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -3049,7 +3051,7 @@
                         <div class="form-head animate-top">Ваша заявка успешно отправлена</div>
                         <div class="form-desk animate-top">Наш менеджер свяжется с вами в ближайшее время</div>
                     </div>
-                    <a class="button--light" href="#callback-modal">Отправить еще раз</a>
+                    <button class="button--light closeModal">Отлично</button>
                 </div>
             </div>
             <div class="modal js-modal popup ct thanks" id="success-modal-doc">
@@ -3069,9 +3071,7 @@
                         <div class="form-head animate-top">Ваша заявка успешно отправлена</div>
                         <div class="form-desk animate-top">Мы вышлем вам документацию на указанную электронную почту в ближайшее время</div>
                     </div>
-                    <button class="button--light">
-                        <a href="#callback-doc">Отправить еще раз</a>
-                    </button>
+                    <button class="button--light closeModal">Отлично</button>
                 </div>
             </div>
             <div id="callback-modal-expert" class="modal js-modal">
@@ -3129,9 +3129,7 @@
                         </button>
                         <div class="form-head animate-top">Ваша заявка успешно отправлена</div>
                         <div class="form-desk animate-top">Наш эксперт свяжется с вами в ближайшее время</div>
-                        <button class="button--light">
-                            <a href="#callback-expert">Отправить еще раз</a>
-                        </button>
+                        <button class="button--light closeModal">Отлично</button>
                     </div>
                 </div>
                 <style>
