--- a/contacts.html
+++ b/contacts.html
@@ -921,13 +921,13 @@
                                     <li>
                                         <a href="index.html">О модели</a>
                                     </li>
-                                    <li>
+                                    <li data-page="services">
                                         <a href="services.html">Сервис</a>
                                     </li>
-                                    <li>
+                                    <li data-page="media">
                                         <a href="media.html">Медиагалерея</a>
                                     </li>
-                                    <li>
+                                    <li data-page="contacts">
                                         <a href="contacts.html">Контакты</a>
                                     </li>
                                 </ul>
