--- a/index.html
+++ b/index.html
@@ -2454,7 +2454,8 @@
                                     </p>
                                     <div class="order__inner-main-inner">
                                         <span class="order__inner-main-text">Оставляйте заявку на любую комлпектацию модели через сайт или по номеру телефона</span>
-                                        <a href="#callback-modal" class="order__inner-main-btn button--light">Быстрая заявка<div class="order__inner-main-icon">
+                                        <button class="order__inner-main-btn button--light">
+                                            <a href="#callback-modal"></a>Быстрая заявка<div class="order__inner-main-icon">
                                                 <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M35 26.6751V8.33341C35 7.41341 34.2533 6.66675 33.3333 6.66675H6.66667C5.74667 6.66675 5 7.41341 5 8.33341V33.3334L14.8483 28.4334L33.3417 28.3417C34.2583 28.3367 35 27.5917 35 26.6751Z" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                                                     <path d="M11.666 12.7058H27.666" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
@@ -2462,7 +2463,7 @@
                                                     <path d="M11.666 17.3059H22.866" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                                                 </svg>
                                             </div>
-                                        </a>
+                                        </button>
                                     </div>
                                 </div>
                                 <div class="order__hidden-text">
