--- a/media.html
+++ b/media.html
@@ -921,13 +921,13 @@
                                     <li>
                                         <a href="index.html">О модели</a>
                                     </li>
-                                    <li>
+                                    <li data-page="services">
                                         <a href="services.html">Сервис</a>
                                     </li>
-                                    <li>
+                                    <li data-page="media">
                                         <a href="media.html">Медиагалерея</a>
                                     </li>
-                                    <li>
+                                    <li data-page="contacts">
                                         <a href="contacts.html">Контакты</a>
                                     </li>
                                 </ul>
@@ -1058,7 +1058,7 @@
                                     <div class="card video">
                                         <div class="cart__video">
                                             <a href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" data-fancybox>
-                                                <img src="./img/v1.png" alt="">
+                                                <img class="lazyload" data-src="./img/v1.png" alt="">
                                                 <svg width="56" height="55" viewBox="0 0 56 55" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <circle cx="27.6816" cy="27.5" r="27.5" fill="#1B74E3" />
                                                     <path d="M35.3457 26.6341C36.0124 27.019 36.0124 27.9813 35.3457 28.3662L24.5957 34.5727C23.929 34.9576 23.0957 34.4765 23.0957 33.7067L23.0957 21.2936C23.0957 20.5238 23.929 20.0427 24.5957 20.4276L35.3457 26.6341Z" fill="white" />
@@ -1070,7 +1070,7 @@
                                     <div class="card video">
                                         <div class="cart__video">
                                             <a href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" data-fancybox>
-                                                <img src="./img/v5.png" alt="">
+                                                <img class="lazyload" data-src="./img/v5.png" alt="">
                                                 <svg width="56" height="55" viewBox="0 0 56 55" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <circle cx="27.6816" cy="27.5" r="27.5" fill="#1B74E3" />
                                                     <path d="M35.3457 26.6341C36.0124 27.019 36.0124 27.9813 35.3457 28.3662L24.5957 34.5727C23.929 34.9576 23.0957 34.4765 23.0957 33.7067L23.0957 21.2936C23.0957 20.5238 23.929 20.0427 24.5957 20.4276L35.3457 26.6341Z" fill="white" />
@@ -1081,58 +1081,58 @@
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img3_big.jpg">
-                                            <img src="./img/5.png" alt="">
+                                            <img class="lazyload" data-src="./img/5.png" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img2_big.jpg">
-                                            <img src="./img/2.png" alt="">
+                                            <img class="lazyload" data-src="./img/2.png" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img10_big.jpg">
-                                            <img src="./img/7.png" alt="">
+                                            <img class="lazyload" data-src="./img/7.png" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img10_big.jpg">
-                                            <img src="./img/7.png" alt="">
+                                            <img class="lazyload" data-src="./img/7.png" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img13_big.jpg">
-                                            <img src="./img/8.png" alt="">
+                                            <img class="lazyload" data-src="./img/8.png" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img3_big.jpg">
-                                            <img src="./img/5.png" alt="">
+                                            <img class="lazyload" data-src="./img/5.png" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img6_big.jpg">
-                                            <img src="./img/6.png" alt="">
+                                            <img class="lazyload" data-src="./img/6.png" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img10_big.jpg">
-                                            <img src="./img/7.png" alt="">
+                                            <img class="lazyload" data-src="./img/7.png" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img13_big.jpg">
-                                            <img src="./img/8.png" alt="">
+                                            <img class="lazyload" data-src="./img/8.png" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img7_big.jpg">
-                                            <img src="./img/9.png" alt="">
+                                            <img class="lazyload" data-src="./img/9.png" alt="">
                                         </a>
                                     </div>
                                     <div class="card video">
                                         <div class="cart__video">
                                             <a href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" data-fancybox>
-                                                <img src="./img/v3.png" alt="">
+                                                <img class="lazyload" data-src="./img/v3.png" alt="">
                                                 <svg width="56" height="55" viewBox="0 0 56 55" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <circle cx="27.6816" cy="27.5" r="27.5" fill="#1B74E3" />
                                                     <path d="M35.3457 26.6341C36.0124 27.019 36.0124 27.9813 35.3457 28.3662L24.5957 34.5727C23.929 34.9576 23.0957 34.4765 23.0957 33.7067L23.0957 21.2936C23.0957 20.5238 23.929 20.0427 24.5957 20.4276L35.3457 26.6341Z" fill="white" />
@@ -1143,13 +1143,13 @@
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img11_big.jpg">
-                                            <img src="./img/10.png" alt="">
+                                            <img class="lazyload" data-src="./img/10.png" alt="">
                                         </a>
                                     </div>
                                     <div class="card video">
                                         <div class="cart__video">
                                             <a href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" data-fancybox>
-                                                <img src="./img/v3.png" alt="">
+                                                <img class="lazyload" data-src="./img/v3.png" alt="">
                                                 <svg width="56" height="55" viewBox="0 0 56 55" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <circle cx="27.6816" cy="27.5" r="27.5" fill="#1B74E3" />
                                                     <path d="M35.3457 26.6341C36.0124 27.019 36.0124 27.9813 35.3457 28.3662L24.5957 34.5727C23.929 34.9576 23.0957 34.4765 23.0957 33.7067L23.0957 21.2936C23.0957 20.5238 23.929 20.0427 24.5957 20.4276L35.3457 26.6341Z" fill="white" />
@@ -1160,23 +1160,23 @@
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img5_big.jpg">
-                                            <img src="./img/11.png" alt="">
+                                            <img class="lazyload" data-src="./img/11.png" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img7_big.jpg">
-                                            <img src="./img/9.png" alt="">
+                                            <img class="lazyload" data-src="./img/9.png" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img13_big.jpg">
-                                            <img src="./img/8.png" alt="">
+                                            <img class="lazyload" data-src="./img/8.png" alt="">
                                         </a>
                                     </div>
                                     <div class="card video">
                                         <div class="cart__video">
                                             <a href="https://www.youtube.com/watch?v=kJZ7Bia772Q&feature=youtu.be&ab_channel=%D0%A1%D0%BF%D0%BE%D1%80%D1%82%D0%9B%D0%B0%D0%B9%D0%BD%D0%9F%D0%BE%D0%B2%D0%BE%D0%BB%D0%B6%D1%8C%D0%B5" data-fancybox>
-                                                <img src="./img/v4.png" alt="">
+                                                <img class="lazyload" data-src="./img/v4.png" alt="">
                                                 <svg width="56" height="55" viewBox="0 0 56 55" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <circle cx="27.6816" cy="27.5" r="27.5" fill="#1B74E3" />
                                                     <path d="M35.3457 26.6341C36.0124 27.019 36.0124 27.9813 35.3457 28.3662L24.5957 34.5727C23.929 34.9576 23.0957 34.4765 23.0957 33.7067L23.0957 21.2936C23.0957 20.5238 23.929 20.0427 24.5957 20.4276L35.3457 26.6341Z" fill="white" />
@@ -1187,22 +1187,22 @@
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img3_big.jpg">
-                                            <img src="./img/5.png" alt="">
+                                            <img class="lazyload" data-src="./img/5.png" alt="">
                                         </a>
                                     </div>
                                     <div class="card images">
                                         <a data-fancybox href="./img/img3_big.jpg">
-                                            <img src="./img/5.png" alt="">
+                                            <img class="lazyload" data-src="./img/5.png" alt="">
                                         </a>
                                     </div>
                                 </div>
-                                <button id="loadMore" class="button--light">Загрузить больше<svg width="41" height="40" viewBox="0 0 41 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <a id="loadMore" class="button--light">Загрузить больше<svg width="41" height="40" viewBox="0 0 41 40" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <rect x="11.8457" y="11.6633" width="23.3431" height="23.3431" rx="3" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                                         <path d="M23.5153 20V26.6694" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                                         <path d="M20.1816 23.3347H26.8511" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                                         <path d="M11.8433 28.337H10.1759C7.41334 28.337 5.17383 26.0974 5.17383 23.3349V9.99598C5.17383 7.23341 7.41334 4.9939 10.1759 4.9939H23.5148C26.2774 4.9939 28.5169 7.23341 28.5169 9.99598V11.6633" stroke="#1B74E3" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                                     </svg>
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
